# ALYN

./: .gitignore  Cargo.toml  README.md  scratch.txt  test-output.txt
alyn_common/: Cargo.toml
alyn_common/src/: lib.rs  names.rs
backpinning/: Cargo.toml  README.md
backpinning/src/: diagram.rs  lib.rs  pad.rs
backpinning/tests/: test.rs
ex/: binsearch.alyn  calls.alyn  partition.alyn  quicksort.alyn  simple.alyn  simple_call.alyn  swap.alyn
qwordal/: Cargo.toml
qwordal/src/: alloc.rs  cfg.rs  elim_ord.rs  intfs.rs  lib.rs  liveness.rs  spill.rs
qwordal/tests/: integration_test.rs
regalloc_common/: Cargo.toml
regalloc_common/src/: asn.rs  cfg.rs  ctrl_flow.rs  lib.rs  liveness.rs  slot_alloc.rs  stg.rs  stmt.rs
src/: ast.rs  ast_to_ir.rs  canon.rs  cli_args.rs  frame.rs  grammar.lalrpop  ir.rs  main.rs  names.rs  parse.rs  sym.rs  tcx.rs  ty.rs  tyck.rs  utils.rs  wrap_ir.rs
src/ast/: impls.rs  mod.rs
src/backend/: lark.rs  mod.rs
src/backends/: avr.rs  i8086.rs  lark.rs  mod.rs  sprind.rs
src/instr_sel/: lark.rs  mod.rs
src/ir/: impls.rs  ir.rs  mod.rs  wrap.rs
src/regalloc/: cfg.rs  color_graph.rs  color_graph2.rs  interferences.rs  live_sets.rs  mod.rs  regalloc.rs  regalloc3.rs  regalloc_chordal.rs  regalloc_state_machine.rs  test_datastructures.rs
src/snapshots/: alyn__ast_to_ir__test__fib.snap  alyn__ast_to_ir__test__knr_binsearch.snap  alyn__ast_to_ir__test__matsum.snap  alyn__ast_to_ir__test__shiftmul.snap  alyn__ast_to_ir__test__simple_if.snap  alyn__ast_to_ir__test__simple_while.snap  alyn__ast_to_ir__test__subr_params.snap  (+34 more)
(+18 files in other folders)
