[package]
name = "alyn"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.0.1", features = [
    "from", "try_from", "debug", "display"
] }
internment = "0.8.6"
lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }
smallvec = "1.15.1"
priority-queue = "2.0.0"

[build-dependencies]
lalrpop = "0.22.2"

[dev-dependencies]
insta = { version = "1.43.1", features = ["filters"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
